discussion/kv_engine/128644/128644_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Add PrometheusStatCollector

Change-Id: I48aeaf7ff24366a6ef9bccf9fd355bf5f9704df8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-21 12:05:29.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-21 12:34:48.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2338/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10: error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
#include <prometheus/client_metric.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2338/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10:
error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2338/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/854/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/include/statistics/prometheus_collector.h b/include/statistics/prometheus_collector.h
index 3c81db5..cca0c4a 100644
--- a/include/statistics/prometheus_collector.h
+++ b/include/statistics/prometheus_collector.h
@@ -24,7 +24,8 @@
 
 class PrometheusStatCollector : public StatCollector {
 public:
-    PrometheusStatCollector(std::string prefix = &quot;kv_&quot;): prefix(std::move(prefix)) {
+    PrometheusStatCollector(std::string prefix = &quot;kv_&quot;)
+        : prefix(std::move(prefix)) {
     }
 
     // Allow usage of the &quot;helper&quot; methods defined in the base type.

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/854/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24176/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/prometheus_collector.h:22:10:
fatal error: "prometheus/client_metric.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24176/ )
----------------------------------------------------------------------------------------------------------------------
